WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180448
Fix crash when loading a file URL that does not have a fileSystemPath representation
https://bugs.webkit.org/show_bug.cgi?id=180448
Summary
Fix crash when loading a file URL that does not have a fileSystemPath represe...
Alex Christensen
Reported
2017-12-05 14:22:42 PST
Fix crash when loading a file URL that does not have a fileSystemPath representation
Attachments
Patch
(3.03 KB, patch)
2017-12-05 14:24 PST
,
Alex Christensen
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-12-05 14:24:22 PST
Created
attachment 328499
[details]
Patch
Alex Christensen
Comment 2
2017-12-05 15:15:13 PST
http://trac.webkit.org/r225553
Radar WebKit Bug Importer
Comment 3
2017-12-05 15:16:20 PST
<
rdar://problem/35866415
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug