Fix crash when loading a file URL that does not have a fileSystemPath representation https://bugs.webkit.org/show_bug.cgi?id=180448 <rdar://problem/22805921>

Reviewed by Chris Dumez.

Source/WebKit:

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::assumeReadAccessToBaseURL):
Check if a String is null before adding it to a HashSet.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/LoadAlternateHTMLString.mm:
(TEST):
Test opening a URL that used to crash WebKit.



Canonical link: https://commits.webkit.org/196382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225553 268f45cc-cd09-0410-ab3c-d52691b4dbfc